[project]
name = "brent"
version = "0.1.0"
description = "a discord bot for reporting the most recent crowd-sourced location of The Goons in Escape From Tarkov."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "arrow",
    "beautifulsoup4",
    "discord.py",
    "requests"
]

[tool.ruff]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
lint.select = ["E", "F", "B"]
line-length = 88
target-version = "py311"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"